plugins {
    id 'java'
}

group = 'ru.dargen'
version = '1.0.2'

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'com.google.code.gson:gson:2.10.1'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
    withSourcesJar()
}
